<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        tools:src="@drawable/perahu_kertas" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:layout_margin="20dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/id_book"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="-20dp"
                    android:text=":"
                    android:textColor="@color/grey"/>

                <TextView
                    android:id="@+id/tv_id_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    tools:text="@string/id_book_pk"
                    android:textColor="@color/grey"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/title_book"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="-20dp"
                    android:text=":"
                    android:textColor="@color/grey"/>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    tools:text="@string/title_book_pk"
                    android:textColor="@color/grey"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/isbn_book"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="-20dp"
                    android:text=":"
                    android:textColor="@color/grey"/>

                <TextView
                    android:id="@+id/tv_isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    tools:text="@string/isbn_book_pk"
                    android:textColor="@color/grey"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/penerbit_book"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="-20dp"
                    android:text=":"
                    android:textColor="@color/grey"/>

                <TextView
                    android:id="@+id/tv_penerbit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    tools:text="@string/penerbit_book_pk"
                    android:textColor="@color/grey"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/pengarang_book"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="-20dp"
                    android:text=":"
                    android:textColor="@color/grey"/>

                <TextView
                    android:id="@+id/tv_pengarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    tools:text="@string/pengarang_book_pk"
                    android:textColor="@color/grey"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/tahun_book"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="-20dp"
                    android:text=":"
                    android:textColor="@color/grey"/>

                <TextView
                    android:id="@+id/tv_tahun_buku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    tools:text="@string/tahun_book_pk"
                    android:textColor="@color/grey"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</LinearLayout>